--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,32 @@
     <title>Youtube Downloader</title>
 </head>
 <body>
+<div class="container my-5">
+    <form>
+        <fieldset>
+            <legend>Youtube Downloader</legend>
+            <div class="mb-3">
+                <label for="urlInput" class="form-label">URL</label>
+                <input type="text" id="urlInput" class="form-control" placeholder="Enter video url here">
+            </div>
+            <div class="mb-3">
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="radioType">
+                    <label class="form-check-label" for="radioType">
+                        Show audio options
+                    </label>
+                </div>
+            </div>
+            <div class="mb-3">
+                <label for="selectInput" class="form-label">Select Type</label>
+                <select id="selectInput" class="form-select">
+                    <option>First</option>
+                </select>
+            </div>
+            <button type="submit" class="btn btn-primary">Download</button>
+        </fieldset>
+    </form>
+</div>
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
