basic form submission

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,9 +14,10 @@
 </head>
 <body>
 <div class="container my-5">
-    <form>
+    <form id="basicForm">
         <fieldset>
             <legend>Youtube Downloader</legend>
+            <p id="errorText" class="text-danger"></p>
             <div class="mb-3">
                 <label for="urlInput" class="form-label">URL</label>
                 <input type="text" id="urlInput" class="form-control" placeholder="Enter video url here">
