getting video types available

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,8 @@
             <p id="errorText" class="text-danger"></p>
             <div class="mb-3">
                 <label for="urlInput" class="form-label">URL</label>
-                <input type="text" id="urlInput" class="form-control" placeholder="Enter video url here">
+                <input name="urlInput" type="text" id="urlInput" class="form-control"
+                       placeholder="Enter video url here">
             </div>
             <div class="mb-3">
                 <div class="form-check">
