--- a/templates/index.html
+++ b/templates/index.html
@@ -23,23 +23,31 @@
                 <input name="urlInput" type="text" id="urlInput" class="form-control"
                        placeholder="Enter video url here">
             </div>
-            <div class="mb-3">
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="radioType">
-                    <label class="form-check-label" for="radioType">
-                        Show audio options
-                    </label>
-                </div>
-            </div>
-            <div class="mb-3">
-                <label for="selectInput" class="form-label">Select Type</label>
-                <select id="selectInput" class="form-select">
-                    <option>First</option>
-                </select>
-            </div>
-            <button type="submit" class="btn btn-primary">Download</button>
+            <button type="submit" id="getTypes" class="btn btn-primary">
+                Download
+            </button>
         </fieldset>
     </form>
+    <!-- Types Modal -->
+    <div class="modal fade" id="typesModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Select Type</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="mb-3">
+                        <select id="selectInput" class="form-select"></select>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" id="downloadBtn" class="btn btn-primary">Download</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 <!-- Bootstrap JS -->
