--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,7 @@
 </head>
 <body>
 <div class="container my-5">
+    <!-- URL Form -->
     <form id="basicForm">
         <fieldset>
             <legend>Youtube Downloader</legend>
@@ -65,10 +66,11 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous">
 </script>
-<!-- User JS -->
+<!-- Required for jquery -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+<!-- User JS -->
 <script src="/static/script.js"></script>
 </body>
 </html>
